Compositor image loader skips frames #56712

Closed
opened 2018-09-07 11:42:19 +02:00 by Alex P · 5 comments

System Information
Windows 10, GTX 1050ti

Blender Version
2.8 b060248324

Short description of error
Compositor image loader skips every second frame, so for frame 0 it loads 0000.jpg but for frame 1 it loads file 0002.jpg and for 2 0004.jpg and so on. Test file attached.

Exact steps for others to reproduce the error
Just load attached project file, it contains .blend and numbered jpegs, image sequence.
28_every_2_frames.7z

**System Information** Windows 10, GTX 1050ti **Blender Version** 2.8 b0602483249 **Short description of error** Compositor image loader skips every second frame, so for frame 0 it loads 0000.jpg but for frame 1 it loads file 0002.jpg and for 2 0004.jpg and so on. Test file attached. **Exact steps for others to reproduce the error** Just load attached project file, it contains .blend and numbered jpegs, image sequence. [28_every_2_frames.7z](https://archive.blender.org/developer/F4612357/28_every_2_frames.7z)
Author

Added subscriber: @Alex-9

Added subscriber: @Alex-9

Added subscriber: @mont29

Added subscriber: @mont29
Bastien Montagne self-assigned this 2018-09-08 16:45:50 +02:00

Leftover from fields option removal…

Leftover from fields option removal…

This issue was referenced by f074642b2c

This issue was referenced by f074642b2cf3b73ed98b6a0833d6a81af37430b0

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56712
No description provided.