Fix T56712: Compositor image loader skips frames.

Bad removal of 'Fields' option for image sequences...